#pragma once

namespace blitz
{
    struct RenderCommand
    {
    };
} // namespace blitz