#pragma once

#include "blitzcommon/Utils.h"

namespace blitz
{
    struct WindowDef
    {
    };

    class Window: private NonCopyable
    {
    };
}